# ControllerImage

./: .gitignore  .wikiheaders-options  CMakeLists.txt  DATA-LICENSE.txt  LICENSE.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
art/kenney/: credits.txt
art/kenney/gamepad/luna/: guids
art/kenney/gamepad/ouya/: guids
art/kenney/gamepad/ps5/: inherits
art/kenney/gamepad/stadia/: inherits
art/kenney/gamepad/steamdeck/: guids
art/ordinary/: notes.txt
art/standard/: credits.txt
art/standard/gamepad/stadia/: guids
art/standard/gamepad/switchpro/: inherits
art/standard/gamepad/wiinunchuck/: inherits
art/standard/gamepad/xboxseries/: inherits
data/gamepad/ps3/: credit.txt
src/: controllerimage.c  controllerimage.h  demo-controllerimage.c  make-controllerimage-data.c  nanosvg.h  nanosvgrast.h  test-controllerimage.c
